# similarity-based-memory-re

./: .env.example  .flake8  .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
configs/: base.yaml
configs/artifacts_tracking/: global.yaml  grouped.yaml  multirun.yaml
configs/hydra_logging/: default.yaml  disabled.yaml
configs/jerex/: base.yaml
configs/jerex/cdr/: base.yaml  test.yaml
configs/jerex/doc_red_distant/: pretrain.yaml
configs/jerex/jerex_joint_doc_red/: base.yaml  test.yaml  train.yaml
configs/jerex/re_doc_red/: base.yaml  test.yaml
configs/loggers/: csv.yaml  wandb.yaml
configs/memory_re/: base.yaml
configs/memory_re/cdr/: base.yaml  test.yaml  train.yaml
configs/memory_re/doc_red_distant/: pretrain.yaml
configs/memory_re/jerex_joint_doc_red/: base.yaml  test.yaml  train.yaml
configs/memory_re/re_doc_red/: base.yaml  test.yaml
memory_re/: settings.py
memory_re/data/: sampling.py
memory_re/data/datamodules/: jerex.py  memory_re.py
memory_re/data/datasets/: __init__.py  cdr.py  dataset.py  doc_red.py  entities.py
memory_re/evaluation/: jerex_evaluator.py
memory_re/models/jerex/: model_wrapper.py  runner.py  training_wrapper.py
memory_re/models/memory_re/: __init__.py  memory_re.py  memory_re_global.py  memory_re_multi_instance.py  misc.py  modules.py  runner.py  training_wrapper.py
memory_re/models/memory_re/memory_modules/: __init__.py  arcface.py  base.py  bilinear.py  cosine.py
memory_re/training/: memory_re_loss.py  trainer.py  training_wrapper.py
memory_re/training/optim/: schedulers.py
memory_re/utils/: collections.py  configs.py  io.py  logger.py  pretrained_models.py  random.py  similarity_scores.py  tensors.py
memory_re/utils/callbacks/: __init__.py  best_metric_value_tracking.py  memory_attention_tracking.py  relation_extraction_prediction_html_saver.py
memory_re/visualization/relation_extraction/predictions/: to_html.py
scripts/: fetch_models.sh  run.py
scripts/datasets/: fetch_datasets.sh
scripts/datasets/building/: process_cdr.py  process_cdr_final.py  process_doc_red.py  process_jerex_doc_red_joint.py  process_re_doc_red.py
storage/misc/: relation_extraction_example_template.html
tests/: conftest.py
